tests-integration/tests/snapshots/e2e__git_ignore__check_before.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "tracked_ignored.rs",
      "status": "missing"
    }
  ]
}
