tests-integration/tests/snapshots/e2e__git_ignore__format.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": true,
      "path": "tracked_ignored.rs",
      "status": "missing"
    }
  ]
}
